--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,13 @@
 modId=betterleveling
 mod_version=0.5.0
 mod_author=Darkorg
-mod_displayName=Better Leveling
+mod_displayName=Better Leveling Potato Edition
 # Update versions from here
-forge_version=44.1.16
-minecraft_version=1.19.3
-mappings_version=2023.02.05-1.19.3
+forge_version=43.2.8
+minecraft_version=1.19.2
+mappings_version=2022.11.27-1.19.2
 # Gradle
-org.gradle.jvmargs=-Xmx2G
-org.gradle.daemon=false
+    org.gradle.jvmargs=-Xmx2G
+    org.gradle.daemon=false
+    org.gradle.parallel=true
+    org.gradle.caching=true
