--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 modId=betterleveling
 mod_version=0.5.0
 mod_author=Darkorg
-mod_displayName=Better Leveling Potato Edition
+mod_displayName=Better Leveling
 # Update versions from here
 forge_version=43.2.8
 minecraft_version=1.19.2
