--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ mod_version=0.6.2
 mod_author=Darkorg
 mod_displayName=Better Leveling
 # Update versions from here
-forge_version=45.2.8
-minecraft_version=1.19.4
-mappings_version=2023.06.26-1.19.4
+forge_version=49.0.26
+minecraft_version=1.20.4
+mappings_version=1.20.3-2023.12.31-1.20.4
 # Gradle
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
